--- a/src/Socks5.Net.Extensions/Socks5.Net.Extensions.csproj
+++ b/src/Socks5.Net.Extensions/Socks5.Net.Extensions.csproj
@@ -2,10 +2,21 @@
    <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
+    <Authors>Hugo Zhang</Authors>
+    <Version>0.1.0</Version>
+    <Title>Socks5.Net.Extensions</Title>
+    <PackageProjectUrl>https://github.com/Hugozys/Socks5.Net</PackageProjectUrl>
+    <PackageTags>.Net5, Socks5, Proxy, Cryptography, Chacha20</PackageTags>
+    <PackageReleaseNotes>(Please write the package release notes in "../RELEASE-NOTES.txt")</PackageReleaseNotes>
+    <PackageOutputPath>../../publish</PackageOutputPath>
+    <Copyright>Copyright © 2021 Hugo Zhang, MIT License</Copyright>
+    <Description>This package provides an obfuscation layer for Socks5.Net</Description>
+    <LicenseExpression>MIT</LicenseExpression>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Socks5.Net\Socks5.Net.csproj" />
-    <ProjectReference Include="..\..\lib\NSec\src\Cryptography\NSec.Cryptography.csproj" />
-    <ProjectReference Include="..\..\lib\NSec\src\Experimental\NSec.Experimental.csproj" />
+    <ProjectReference Include="..\..\lib\NSec\src\Cryptography\NSec.Cryptography.csproj"/>
+    <ProjectReference Include="..\..\lib\NSec\src\Experimental\NSec.Experimental.csproj"/>
   </ItemGroup>
 </Project>
