--- a/tools/SocksServer/SocksServer.csproj
+++ b/tools/SocksServer/SocksServer.csproj
@@ -15,6 +15,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
 </Project>
