--- a/src/Socks5.Net/Socks5.Net.csproj
+++ b/src/Socks5.Net/Socks5.Net.csproj
@@ -8,13 +8,21 @@
     <Version>0.1.0</Version>
     <Title>Socks5.Net</Title>
     <PackageProjectUrl>https://github.com/Hugozys/Socks5.Net</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Hugozys/Socks5.Net.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <PackageTags>.Net5, Socks5, Proxy</PackageTags>
     <PackageReleaseNotes>(Please write the package release notes in "../RELEASE-NOTES.txt")</PackageReleaseNotes>
-    <PackageOutputPath>../../publish</PackageOutputPath>
+    <PackageOutputPath>../../package</PackageOutputPath>
     <Copyright>Copyright © 2021 Hugo Zhang, MIT License</Copyright>
     <Description>This package partially implements Socks5 Protocol based on RFC-1928</Description>
     <LicenseExpression>MIT</LicenseExpression>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="LICENSE.txt" Pack="true" Visible="false" PackagePath=""/>
+  </ItemGroup>
 
 <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
