--- a/src/Socks5.Net.Extensions/Socks5.Net.Extensions.csproj
+++ b/src/Socks5.Net.Extensions/Socks5.Net.Extensions.csproj
@@ -4,13 +4,16 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
     <Authors>Hugo Zhang</Authors>
-    <Version>0.1.0</Version>
+    <Version>0.2.0</Version>
     <Title>Socks5.Net.Extensions</Title>
     <PackageProjectUrl>https://github.com/Hugozys/Socks5.Net</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Hugozys/Socks5.Net.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>.Net5, Socks5, Proxy, Cryptography, Chacha20</PackageTags>
-    <PackageReleaseNotes>(Please write the package release notes in "../RELEASE-NOTES.txt")</PackageReleaseNotes>
+    <PackageReleaseNotes>
+0.2.0 - Added release notes
+0.1.0 - Initial release
+</PackageReleaseNotes>
     <PackageOutputPath>../../package</PackageOutputPath>
     <Copyright>Copyright © 2021 Hugo Zhang, MIT License</Copyright>
     <Description>This package provides an obfuscation layer for Socks5.Net</Description>
