--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,8 +64,8 @@ jobs:
         dotnet publish -c release tools/SocksServer/SocksServer.csproj -r win-x64 --self-contained true -o ./bin -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
         ./bin/Client.exe -h
         ./bin/SocksServer.exe -h
-        mv ./bin/Client.exe ./bin/sclient_win-x64_${{ needs.nuget.outputs.version }}.exe
-        mv ./bin/SocksServer.exe ./bin/sserver_win-x64_${{ needs.nuget.outputs.version }}.exe
+        mv ./bin/Client.exe ./bin/sclient_win-x64_${VERSION}.exe
+        mv ./bin/SocksServer.exe ./bin/sserver_win-x64_${VERSION}.exe
       if: matrix.os == 'windows-latest'
 
     - name: Upload release assets for Linux
