--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,18 +27,17 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
-    - name: Build
-      run: dotnet build -c release
-
-    - name: Run unit tests
+    - name: Build Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./tests/Dockerfile
+        tags: test:latest
+        load: true  # This is important for running the image locally in the next step
+    - name: Run tests
       run: |
-        dotnet test tests/Socks5.Net.UnitTests --no-restore -c release --collect:"XPlat Code Coverage" --settings ./tests/coverlet.runsettings --results-directory ./results
-        dotnet test tests/Socks5.Net.Extensions.UnitTests --no-restore -c release --collect:"XPlat Code Coverage" --settings ./tests/coverlet.runsettings --results-directory ./results
-    
-    - name: Run integration tests
-      run: |
-        dotnet test tests/Socks5.Net.IntegrationTests --no-restore -c release --collect:"XPlat Code Coverage" --settings ./tests/coverlet.runsettings --results-directory ./results
-
+        docker run -v ./results:/app/results --rm test:latest
+  
     - name: Publish self-contained binaries on linux
       run: |
         dotnet publish -c release tools/Client/Client.csproj -r linux-x64 --self-contained true -o ./bin -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
@@ -83,17 +82,17 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
-    - name: Build
-      run: dotnet build -c release
+    - name: Build Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./tests/Dockerfile
+        tags: test:latest
+        load: true  # This is important for running the image locally in the next step
 
-    - name: Run unit tests
+    - name: Run tests
       run: |
-        dotnet test tests/Socks5.Net.UnitTests --no-restore -c release --collect:"XPlat Code Coverage" --settings ./tests/coverlet.runsettings --results-directory ./results
-        dotnet test tests/Socks5.Net.Extensions.UnitTests --no-restore -c release --collect:"XPlat Code Coverage" --settings ./tests/coverlet.runsettings --results-directory ./results
-    
-    - name: Run integration tests
-      run: |
-        dotnet test tests/Socks5.Net.IntegrationTests --no-restore -c release --collect:"XPlat Code Coverage" --settings ./tests/coverlet.runsettings --results-directory ./results
+        docker run -v ./results:/app/results --rm test:latest
 
     - name: Push nuget package
       run: |
